# color_book

./: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
common/: objloader.cpp  objloader.hpp
python/: tracker.py  video_reader.py  warp_image.py
src/: SimpleVertexShader.vertexshader  aruco_simple.cpp  gltest.cpp  gltest2.cpp  texture_model_util.cpp  texture_model_util.h  tracker.cpp  tracker.h  video_reader.cpp
util/: .texture_cube2.obj.swp  board.yml  camera.yml  image_edit.m  texture_cube2.obj~
